AM_DEFAULT_SOURCE_EXT = .cpp

sbin_PROGRAMS = \
	chassiskill

chassiskill_SOURCES = \
	chassiskill.cpp

chassiskill_CXXFLAGS = \
	$(SYSTEMD_CFLAGS) \
	$(PHOSPHOR_LOGGING_CFLAGS) \
	$(PHOSPHOR_DBUS_INTERFACES_CFLAGS) \
	$(SDBUSPLUS_CFLAGS) \
	$(SDEVENTPLUS_CFLAGS)

chassiskill_LDFLAGS = \
	$(SYSTEMD_LIBS) \
	$(PHOSPHOR_LOGGING_LIBS) \
	$(PHOSPHOR_DBUS_INTERFACES_LIBS) \
	$(SDBUSPLUS_LIBS) \
	$(SDEVENTPLUS_LIBS)
